# bellis

./: .gitignore  instrumentation.node.ts  langgraph.json  next.config.ts  package.json  pnpm-lock.yaml  proxy.ts  pyproject.toml  tsconfig.json
api/: vectors.py
api/public/: vectors.py
app/: AppShell.tsx  globals.css  layout.tsx  page.tsx
app/about/: page.tsx
app/analytics/: FlashcardQualitySection.tsx  PlotlyScatter3D.tsx  UserThumbsSection.tsx  VectorSection.tsx  page.tsx
app/animations/: Clouds.tsx  Flowers.tsx  ModeSwitch.tsx  Sparkles.tsx
app/api/chat/: route.ts
app/api/flashcards/: route.ts
app/api/langfuse/flashcard-quality/: route.ts
app/api/langfuse/user-thumbs/: route.ts
app/api/tools/: dictionaryLookup.ts  imageSearch.ts  similaritySearch.ts
app/components/: AuthPageLayout.tsx  BellisMark.tsx  ChatBot.tsx  DictionaryData.tsx  FlashcardBack.tsx  FlashcardDetails.tsx  FlashcardFront.tsx  LanguageProficiencySelect.tsx  Markdown.tsx  RedirectWhenSignedIn.tsx  RichText.tsx  UserFeedback.tsx  WordLookupProgress.tsx  WordLookupResult.tsx
app/lib/: authUser.ts  graph.ts  langfuse.ts  mongodb.ts  vectorStore.ts
app/sign-in/[[...sign-in]]/: page.tsx
app/sign-up/[[...sign-up]]/: page.tsx
experiments/: addFlashcardDatasetData.ts  flashcardDatasetItems.ts  runFlashcardWriterExperiment.ts
